--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,6 +33,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_database_ops">databaseOps</string>
-    <string name="title_activity_display_students">displayStudents</string>
+    <string name="title_activity_display_students">Random Student</string>
     <string name="set_up_new_roster">Go To Setup Screen</string>
 </resources>
